--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "newrelic": "^8.1.0"
   }
 }
